--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 			<!-- About 2 -->
       <div class="row">
         <div class="col-md-6 about-text">
-          <h6>Power BI test</h6><!-- Headline -->
+          <h6>Power BI</h6><!-- Headline -->
           <p>In order to increase my marketable skills, I have taken up a personal mission to become proficient in Power BI, knowing that it is a very valuable skill to the job market especially in the field of data analysis. I took sample data,  and made a number of visuals highlighting key financial information.</p><br><!-- About Text 2 -->
           <!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>      -->
         </div>
