--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 			<!-- About 2 -->
       <div class="row">
         <div class="col-md-6 about-text">
-          <h6>Power BI</h6><!-- Headline -->
-          <p>In order to increase my marketable skills, I have taken up a personal mission to become proficient in Power BI, knowing that it is a very valuable skill to the job market especially in the field of data analysis. I took sample data,  and made a number of visuals highlighting key financial information.</p><br><!-- About Text 2 -->
+          <h6>Big Data Analyis: Kidney Cancer RNA Sequences</h6><!-- Headline -->
+          <p>I was a member of a group who was tasked with the analysis of kidney tumour RNA sequence data from over 500 patients with the goal of identifying subtypes of cancer. We used clustering to find correlation in gene expression an were able to identify three distinct subtypes from the data set. It was a wonderful learning experience and has gotten me far more comfortable with big data manipulation.</p><br><!-- About Text 2 -->
           <!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>      -->
         </div>
         <div class="col-md-6 nopadding features-intro-img">
