--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
 				        <!-- about / welcome text -->
-                <p> Currently I am a Biomedical engineering student at the University of British Columbia with plans of specializing further in bioinformatics. I have been involved with many projects at the university level and am looking to enter the workforce and gain some valuable relevant job experience in either the biomedical sector or any sector relating to coding/data manipulation. I bring to the table a good work ethic, a willingness to learn new things, and a genuine excitement to work in a technical field.</p>
+                <p> Currently I am a Biomedical engineering student at the University of British Columbia specializing in bioinformatics. I have been involved with many projects at the university level and am looking to enter the workforce and gain some valuable relevant job experience in either the biomedical sector or any sector relating to coding/data manipulation. I bring to the table a good work ethic, a willingness to learn new things, and a genuine excitement to work in a technical field.</p>
               </div>
             </div>
           </div>
