--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
 				        <!-- about / welcome text -->
-                <p> Currently I am a Biomedical engineering student at the University of British Columbia specializing in bioinformatics. I have been involved with many projects at the university level and am looking to enter the workforce and gain some valuable relevant job experience in either the biomedical sector or any sector relating to coding/data manipulation. I bring to the table a good work ethic, a willingness to learn new things, and a genuine excitement to work in a technical field.</p>
+                <p> Currently I am a Biomedical engineering student at the University of British Columbia specializing in bioinformatics. I have recently completed an 8 month Co-Op work term at a Burnaby based company called Webb Electronics, where I worked as a software engineer Co-Op. I was able to learn alot about the design process as well as pick up a number of new skills. I have a strong desire to take these new skills and apply them to any new position I find myself in in the future. I bring to the table a good work ethic, a willingness to learn new things, and a genuine passion for working in tech.</p>
               </div>
             </div>
           </div>
@@ -193,8 +193,13 @@
 					<div class="about-image" style="background-image:url(img/Code1.png)"></div><!-- about image 1 -->
 				</div>
 				<div class="col-md-6 about-text">
-					<h6>Virtual World</h6><!-- headline-->
-					<p>One of the more exciting projects that I had the chance to work on was a programing project that was done with two other students. We were tasked with using javas subclassing abilities to construct a basic virtual world full of different animal AI that were able to make decisions and interact with each other.</p><br><!-- About Text 1 -->
+					<h6>EX350 Development</h6><!-- headline-->
+					<p> One of the biggest projects I was able to work on in my previous Co-Op term at Webb Electronics was the 
+					development of a brand new board called the EX350. This board was designed to increase the number of elevator 
+					phones that can be connected to our main lobby station. I had the opportunity to contribute to the early design 
+					process as well as the design specifications, requirements, and GPIO pin plan. I was tasked with early firmware debugging
+					and proofs of concept for many functions we wanted the board to have (ex. SPI Screen, CAN support, RS485 support). I 
+					was also able to gain some experiance with linux kernel development, specifically in compiling device trees.</p><br>
 					<!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>			 -->
 				</div>
 			</div>
