--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 		    <!-- About 1 -->
 			<div class="row color-bg">
 				<div class="col-md-6 nopadding features-intro-img">
-					<div class="about-image" style="background-image:url(img/Code1.png)"></div><!-- about image 1 -->
+					<div class="about-image" style="background-image:url(img/PCB.png)"></div><!-- about image 1 -->
 				</div>
 				<div class="col-md-6 about-text">
 					<h6>EX350 Development</h6><!-- headline-->
