--- a/index.html
+++ b/index.html
@@ -217,11 +217,14 @@
 			<!-- About 3 -->
 			<div class="row color-bg">
 				<div class="col-md-6 nopadding features-intro-img">
-					<div class="about-image" style="background-image:url(img/Wiki.png)"></div><!-- about image 3 -->
+					<div class="about-image" style="background-image:url(img/Code1.png)"></div><!-- about image 3 -->
 				</div>
 				<div class="col-md-6 about-text">
-					<h6>Concurrent Coding and Wikipedia</h6><!-- Headline-->
-					<p>Another coding project I was able to work on was a class project dealing again with concurrent or multi-threaded programing. The goal of the project was to create a program that is able to connect with Wikipedia and scan for key pieces of information such as titles of pages relevant to that topic and the last person to contribute to said pages. The overall experience taught me a lot about not only technical skills but also how to coordinate with a team you can't physically come into contact with as we could not meet due to COVID.</p><br><!-- About Text 3 -->
+					<h6>Entryphone Auto-Update System</h6><!-- Headline-->
+					<p>Another project that I was a part of at Webb Electronics was developing an Auto-Update system for one of our products so we could 
+					remotely update the software of aour products when they are in the field. With this project I learned alot about both frontend and backend
+					web development. I ended up having to learn bash scripting on the fly as it was an integral part of the auto-update system. Overall it was a benificial
+					experiance not only due to the skills I learned but also taught me alot about software development in a professional, team based environment.</p><br><!-- About Text 3 -->
 					<!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>					 -->
 				</div>
 			</div>
