--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
 				</div>
 				<div class="col-md-6 about-text">
 					<h6>Entryphone Auto-Update System</h6><!-- Headline-->
-					<p>Another project that I was a part of at Webb Electronics was developing an Auto-Update system for one of our products so we could 
-					remotely update the software of aour products when they are in the field. With this project I learned alot about both frontend and backend
+					<p>Another project that I was a part of at Webb Electronics was developing an auto-update system for one of our products so we could 
+					remotely update the software of our products when they are in the field. With this project I learned alot about both frontend and backend
 					web development. I ended up having to learn bash scripting on the fly as it was an integral part of the auto-update system. Overall it was a benificial
 					experiance not only due to the skills I learned but also taught me alot about software development in a professional, team based environment.</p><br><!-- About Text 3 -->
 					<!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>					 -->
