--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
 				        <!-- about / welcome text -->
-                <p> Currently I am a Biomedical engineering student at the University of British Columbia specializing in bioinformatics. I have recently completed an 8 month Co-Op work term at a Burnaby based company called Webb Electronics, where I worked as a software engineer Co-Op. I was able to learn alot about the design process as well as pick up a number of new skills. I have a strong desire to take these new skills and apply them to any new position I find myself in in the future. I bring to the table a good work ethic, a willingness to learn new things, and a genuine passion for working in tech.</p>
+                <p> Currently I am a Biomedical Engineering student at the University of British Columbia specializing in Bioinformatics. I have recently completed an 8 month co-op work term at a Burnaby BC based company called Webb Electronics, where I worked as a Software Engineer Co-Op. I was able to learn a lot about the design process as well as aquire a number of new skills. I have a strong desire to take these new skills and apply them to any new position in in the future. I bring to the table a strong work ethic, a willingness to learn new things, and a genuine passion for working in tech.</p>
               </div>
             </div>
           </div>
@@ -135,7 +135,7 @@
                       <i class="fa fa-cogs"></i><!-- Icon -->
                     </div>
                     <h2>Engineering</h2><!-- Title -->
-                    <p>Ever since I was a child I have been curious about how things around us work, and I have taken that curiosity and turned it into a potential career in engineering. Designing new and improved equipment and technology is how we will progress and I am so excited to be a part of that.</p><!-- Description -->
+                    <p>I have always been curious about how things around us work, and I have taken that curiosity and turned it into a potential career in Engineering. My time at university and working in research and development has only increased my passion for tech development, and it is an industry that I can see myself in long term.</p><!-- Description -->
                   </div>
           <!-- Service Box 2 -->
                   <div class="col-md-4 wp2 item delay-05s">
@@ -143,7 +143,7 @@
                       <i class="fa fa-database"></i><!-- Icon -->
                     </div>
                     <h2>Data Science</h2><!-- Title -->
-                    <p>One might think that biology and data science are inherently irreconcilable, yet this is far from the truth. The emerging field of bioinformatics is exactly where these two subjects collide. Big data and data analysis are quickly becoming things that the biomedical industry needs to deal with on a daily basis. This is what introduced me to data science and I have developed a passion for it ever since.</p><!-- Description -->
+                    <p>One might think that Biology and Data Science are inherently irreconcilable, yet this is far from the truth. The emerging field of Bioinformatics is exactly where these two subjects collide. Big data and data analysis are quickly becoming factors that the biomedical industry needs to deal with on a daily basis. My studies at UBC introduced me to that intersection between these two fields and I have developed a passion for it ever since.</p><!-- Description -->
                   </div>
           <!-- Service Box 3 -->
                   <div class="col-md-4 wp2 item delay-1s">
@@ -151,7 +151,7 @@
                       <i class="fa fa-pagelines"></i><!-- Icon -->
                     </div>
                     <h2>Biology</h2><!-- Title -->
-                    <p>The inner workings of life and the processes that allow for it to be possible are some of the most interesting and important pieces of knowledge we have as a society, and there is still so much to learn. We are in an unprecedented era of biotechnical advancement and I am very passionate about continuing that quest for knowledge. </p><!-- Description -->
+                    <p>The inner workings of life and the processes that allow for it to be possible are some of the most interesting and vital pieces of knowledge we have as a society, and there is still so much to learn. We are in an unprecedented era of biotechnical advancement, and I am passionate about contributing to that march foreward. </p><!-- Description -->
                   </div>
           </div>
                   <div class="clearfix"></div>
@@ -194,12 +194,12 @@
 				</div>
 				<div class="col-md-6 about-text">
 					<h6>EX350 Development</h6><!-- headline-->
-					<p> One of the biggest projects I was able to work on in my previous Co-Op term at Webb Electronics was the 
-					development of a brand new board called the EX350. This board was designed to increase the number of elevator 
-					phones that can be connected to our main lobby station. I had the opportunity to contribute to the early design 
-					process as well as the design specifications, requirements, and GPIO pin plan. I was tasked with early firmware debugging
+					<p> One of the biggest projects I worked on at Webb Electronics was the 
+					development of a brand new PCB (printable computer board) called the EX350. This board was designed to increase the number of elevator 
+					phones that can be connected to the main lobby station, another product of ours. I had the opportunity to contribute to the early design 
+					process like the design specifications, requirements, and GPIO pin plan. I was tasked with early firmware debugging
 					and proofs of concept for many functions we wanted the board to have (ex. SPI Screen, CAN support, RS485 support). I 
-					was also able to gain some experiance with linux kernel development, specifically in compiling device trees.</p><br>
+					was also able to gain some experience with linux kernel development, specifically in compiling device trees.</p><br>
 					<!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>			 -->
 				</div>
 			</div>
@@ -207,7 +207,7 @@
 			<div class="row">
 				<div class="col-md-6 about-text">
 					<h6>Thermal Vaccine Shipper</h6><!-- Headline -->
-					<p>Recently I worked with a student team at the University of British Columbia with the goal of redesigning the thermal shipping units that Pfizer is using to distribute the COVID-19 vaccines as they must be transported at -60 to -80 degrees Celsius. We generated a design, made a virtual prototype of said design, planned the electrical layout, and wrote the code required to run said electronic components.</p><br><!-- About Text 2 -->
+					<p>Recently, I worked with a student team at the University of British Columbia with the goal of redesigning the thermal shipping units that Pfizer is using to distribute the COVID-19 vaccines. The challenge was that the vaccines needed to be transported at -60 to -80 degrees Celsius. We generated a design, made a virtual prototype of the design, planned the electrical layout, and wrote the code required to run the electronic components.</p><br><!-- About Text 2 -->
 					<!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>			 -->
 				</div>
 				<div class="col-md-6 nopadding features-intro-img">
@@ -221,10 +221,10 @@
 				</div>
 				<div class="col-md-6 about-text">
 					<h6>Entryphone Auto-Update System</h6><!-- Headline-->
-					<p>Another project that I was a part of at Webb Electronics was developing an auto-update system for one of our products so we could 
-					remotely update the software of our products when they are in the field. With this project I learned alot about both frontend and backend
-					web development. I ended up having to learn bash scripting on the fly as it was an integral part of the auto-update system. Overall it was a benificial
-					experiance not only due to the skills I learned but also taught me alot about software development in a professional, team based environment.</p><br><!-- About Text 3 -->
+					<p>Another project that I was able to contribute to at Webb Electronics was developing an auto-update system for one of our products so that 
+					the software our product could be updated remotely while they were in the field. With this project I learned a lot about both front-end and back-end
+					web development. I quickly learned how to write bash scripts as it was an integral part of the auto-update system. Overall it was a benificial
+					experiance not only because of the skills I learned, but also because it taught me a great deal about software development in a professional, team based environment.</p><br><!-- About Text 3 -->
 					<!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>					 -->
 				</div>
 			</div>
@@ -232,7 +232,7 @@
       <div class="row">
         <div class="col-md-6 about-text">
           <h6>Big Data Analyis: Kidney Cancer RNA Sequences</h6><!-- Headline -->
-          <p>In my third year at UBC I was a member of a group who was tasked with the analysis of kidney tumour RNA sequence data from over 500 patients with the goal of identifying subtypes of cancer. We used clustering to find correlation in gene expression an were able to identify three distinct subtypes from the data set. It was a wonderful learning experience and has gotten me far more comfortable with big data analysis.</p><br><!-- About Text 2 -->
+          <p>In my third year at UBC, I was a member of a group in one of my classes that was tasked with the analysis of kidney tumour RNA sequence data from over 500 patients with the goal of identifying subtypes of cancer. We used clustering to find correlation in gene expression and we were able to identify three distinct subtypes from the data set. It was a benefical learning experience that has led me to be far more comfortable with big data analysis.</p><br><!-- About Text 2 -->
           <!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>      -->
         </div>
         <div class="col-md-6 nopadding features-intro-img">
