--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
 				        <!-- about / welcome text -->
-                <p> Currently I am a Biomedical Engineering student at the University of British Columbia specializing in Bioinformatics. I have recently completed an 8 month co-op work term at a Burnaby BC based company called Webb Electronics, where I worked as a Software Engineer Co-Op. I was able to learn a lot about the design process as well as aquire a number of new skills. I have a strong desire to take these new skills and apply them to any new position in in the future. I bring to the table a strong work ethic, a willingness to learn new things, and a genuine passion for working in tech.</p>
+                <p> Currently, I am a Biomedical Engineering student at the University of British Columbia specializing in Bioinformatics. I have recently completed an 8 month co-op work term at a Burnaby BC based company called Webb Electronics, where I worked as a Software Engineer Co-Op. I was able to learn a lot about the design process as well as aquire a number of new skills. I have a strong desire to take these new skills and apply them to any new position in the future. I bring to the table a strong work ethic, a willingness to learn new things, and a genuine passion for working in tech.</p>
               </div>
             </div>
           </div>
@@ -135,7 +135,7 @@
                       <i class="fa fa-cogs"></i><!-- Icon -->
                     </div>
                     <h2>Engineering</h2><!-- Title -->
-                    <p>I have always been curious about how things around us work, and I have taken that curiosity and turned it into a potential career in Engineering. My time at university and working in research and development has only increased my passion for tech development, and it is an industry that I can see myself in long term.</p><!-- Description -->
+                    <p>I have always been curious about how things around us work, and I have taken that curiosity and turned it into a potential career in Engineering. My time at university as well as my previous work terms in research and development has only increased my passion for tech development. It is an industry that I can see myself in long term.</p><!-- Description -->
                   </div>
           <!-- Service Box 2 -->
                   <div class="col-md-4 wp2 item delay-05s">
@@ -151,7 +151,7 @@
                       <i class="fa fa-pagelines"></i><!-- Icon -->
                     </div>
                     <h2>Biology</h2><!-- Title -->
-                    <p>The inner workings of life and the processes that allow for it to be possible are some of the most interesting and vital pieces of knowledge we have as a society, and there is still so much to learn. We are in an unprecedented era of biotechnical advancement, and I am passionate about contributing to that march foreward. </p><!-- Description -->
+                    <p>The inner workings of life and the processes that allow for it to be possible are some of the most interesting and vital pieces of knowledge we have as a society, and there is still so much to learn. We are in an unprecedented era of biotechnical advancement, and I am passionate about contributing to that growth. </p><!-- Description -->
                   </div>
           </div>
                   <div class="clearfix"></div>
@@ -196,8 +196,8 @@
 					<h6>EX350 Development</h6><!-- headline-->
 					<p> One of the biggest projects I worked on at Webb Electronics was the 
 					development of a brand new PCB (printable computer board) called the EX350. This board was designed to increase the number of elevator 
-					phones that can be connected to the main lobby station, another product of ours. I had the opportunity to contribute to the early design 
-					process like the design specifications, requirements, and GPIO pin plan. I was tasked with early firmware debugging
+					phones that can be connected to the main lobby station, another product of Webb Electronics. I had the opportunity to contribute to the early design 
+					process such as the design specifications, requirements, and GPIO pin plan. I was tasked with early firmware debugging
 					and proofs of concept for many functions we wanted the board to have (ex. SPI Screen, CAN support, RS485 support). I 
 					was also able to gain some experience with linux kernel development, specifically in compiling device trees.</p><br>
 					<!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>			 -->
@@ -222,9 +222,9 @@
 				<div class="col-md-6 about-text">
 					<h6>Entryphone Auto-Update System</h6><!-- Headline-->
 					<p>Another project that I was able to contribute to at Webb Electronics was developing an auto-update system for one of our products so that 
-					the software our product could be updated remotely while they were in the field. With this project I learned a lot about both front-end and back-end
-					web development. I quickly learned how to write bash scripts as it was an integral part of the auto-update system. Overall it was a benificial
-					experiance not only because of the skills I learned, but also because it taught me a great deal about software development in a professional, team based environment.</p><br><!-- About Text 3 -->
+					the software could be updated remotely while they were in the field. With this project, I learned a lot about both front-end and back-end
+					web development. I quickly learned how to write bash scripts as it was an integral part of the auto-update system. Overall, it was a benificial
+					experience not only because of the skills I learned, but also because it taught me a great deal about software development in a professional, team based environment.</p><br><!-- About Text 3 -->
 					<!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>					 -->
 				</div>
 			</div>
