--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                       <i class="fa fa-cogs"></i><!-- Icon -->
                     </div>
                     <h2>Engineering</h2><!-- Title -->
-                    <p>I have always been curious about how things around us work, and I have taken that curiosity and turned it into a potential career in Engineering. My time at university as well as my previous work terms in research and development has only increased my passion for tech development. It is an industry that I can see myself in long term.</p><!-- Description -->
+                    <p>I have always been curious about how things around us work, and I have taken that curiosity and turned it into a potential career in Engineering. My time at university, as well as my previous work terms in research and development, has only increased my passion for tech development. It is an industry that I can see myself in long term.</p><!-- Description -->
                   </div>
           <!-- Service Box 2 -->
                   <div class="col-md-4 wp2 item delay-05s">
@@ -223,7 +223,7 @@
 					<h6>Entryphone Auto-Update System</h6><!-- Headline-->
 					<p>Another project that I was able to contribute to at Webb Electronics was developing an auto-update system for one of our products so that 
 					the software could be updated remotely while they were in the field. With this project, I learned a lot about both front-end and back-end
-					web development. I quickly learned how to write bash scripts as it was an integral part of the auto-update system. Overall, it was a benificial
+					web development. I quickly learned how to write bash scripts as it was an integral part of the auto-update system. Overall, it was a beneficial
 					experience not only because of the skills I learned, but also because it taught me a great deal about software development in a professional, team based environment.</p><br><!-- About Text 3 -->
 					<!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>					 -->
 				</div>
