--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
 			<!-- About 2 -->
       <div class="row">
         <div class="col-md-6 about-text">
-          <h6>Big Data Analyis: Kidney Cancer RNA Sequences</h6><!-- Headline -->
-          <p>In my third year at UBC, I was a member of a group in one of my classes that was tasked with the analysis of kidney tumour RNA sequence data from over 500 patients with the goal of identifying subtypes of cancer. We used clustering to find correlation in gene expression and we were able to identify three distinct subtypes from the data set. It was a benefical learning experience that has led me to be far more comfortable with big data analysis.</p><br><!-- About Text 2 -->
+          <h6>Mass Flow Testing and Data Analysis</h6><!-- Headline -->
+          <p>During my second Co-op position at a company called Rostrum Medical I designed and oversaw a three-month long test to confirm the repeatability of a type of mass flow sensors that the company was interested in using in their devices. I helped to design and build a temperature-controlled testing environment and testing rig for the sensors, as well as refactored firmware used to control all the necessary components used in the test. I was also in charge of writing the python script used to collect and store large amounts of output data and did all the big data processing/analysis to determine if the mass flow sensors were reliably repeatable over a long period of time. The testing period culminated in me reporting my findings to the head of R&D and Rostrum Medical’s CEO. Overall, I was able to contribute to every aspect of this process from designing and building hardware, developing custom firmware, and writing scripts to collect and process data. I enjoyed the responsibility of my own project, and that I was able to materially contribute to the success of my company. </p><br><!-- About Text 2 -->
           <!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>      -->
         </div>
         <div class="col-md-6 nopadding features-intro-img">
