--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>      -->
         </div>
         <div class="col-md-6 nopadding features-intro-img">
-          <div class="about-image" style="background-image:url(img/DNAkid.png)"></div><!-- about image 2 -->
+          <div class="about-image" style="background-image:url(img/MassFlow.png)"></div><!-- about image 2 -->
         </div>
       </div>
 
