--- a/index.html
+++ b/index.html
@@ -101,12 +101,16 @@
         =========================== -->
         <section class="intro text-center section-padding color-bg" id="about">
           <div class="container">
-		    <!-- WELCOME TEXT -->
             <div class="row">
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
 				        <!-- about / welcome text -->
-                <p> Currently, I am a Biomedical Engineering student at the University of British Columbia specializing in Bioinformatics. I have recently completed an 8 month co-op work term at a Burnaby BC based company called Webb Electronics, where I worked as a Software Engineer Co-Op. I was able to learn a lot about the design process as well as aquire a number of new skills. I have a strong desire to take these new skills and apply them to any new position in the future. I bring to the table a strong work ethic, a willingness to learn new things, and a genuine passion for working in tech.</p>
+                <p> Currently, I am a Biomedical Engineering student at the University of British Columbia specializing in Bioinformatics 
+                  with plans to graduate in May 2024. I have completed a total of 12 months woth of co-op work terms at two seperate 
+                  companies where I worked as a software co-op for 8 months and a hardware co-op for 4. I was able to learn a lot about the design 
+                  process as well as aquire a number of new skills. I have a strong desire to take these new skills and apply them to any new 
+                  position in the future. I bring to the table a strong work ethic, a willingness to learn new things, and a genuine passion 
+                  for working in tech.</p>
               </div>
             </div>
           </div>
@@ -206,8 +210,14 @@
 			<!-- About 2 -->
 			<div class="row">
 				<div class="col-md-6 about-text">
-					<h6>Thermal Vaccine Shipper</h6><!-- Headline -->
-					<p>Recently, I worked with a student team at the University of British Columbia with the goal of redesigning the thermal shipping units that Pfizer is using to distribute the COVID-19 vaccines. The challenge was that the vaccines needed to be transported at -60 to -80 degrees Celsius. We generated a design, made a virtual prototype of the design, planned the electrical layout, and wrote the code required to run the electronic components.</p><br><!-- About Text 2 -->
+					<h6>MyTrials.ai</h6><!-- Headline -->
+					<p>For my year long capstone project in the final year of my degree me and a team of 3 other students developed a web application
+            called MyTrials.ai. This application attempts to bridge the gap between clinical trial providers and patients looking to be involved in said 
+            clinical trials. I took the role of the main backend developer of this application and was able to manage the code base from the beginning of the 
+            project to where we are now (in the alpha prototyping stage). There is still work to be done but it was an invaluable experience getting to work 
+            with my peers for a client who we were accountable to. We hope to eventually host this application and help people in need get into contact 
+            with applicable clinical trials in the near future.
+          </p><br><!-- About Text 2 -->
 					<!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>			 -->
 				</div>
 				<div class="col-md-6 nopadding features-intro-img">
