--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 					<!-- <a href="index.html#team" class="weight-outline-btn">Read more</a>			 -->
 				</div>
 				<div class="col-md-6 nopadding features-intro-img">
-					<div class="about-image" style="background-image:url(img/CAD_model1.png)"></div><!-- about image 2 -->
+					<div class="about-image" style="background-image:url(img/new_logo.png)"></div><!-- about image 2 -->
 				</div>
 			</div>
 			<!-- About 3 -->
